<resources>
    <string name="app_name">WayThere</string>
    <string name="appDescription">WayThere is your traveling companion, which helps you with route planning. Either you travel on foot or by car; WayThere will give you exact route information, departures and other important notifications.</string>

    <!-- Welcome screen activity -->
    <string name="title_activity_welcome_screen">Welcome in WayThere\n</string>
    <string name="functionsTitle">Functions</string>
    <string name="functions">- Route planning\n- Time of departures\n- Notifications</string>
    <string name="permissionTitle">Permissions</string>
    <string name="permission">- Location permission (up to you)\n- Notification permission (recommended)</string>
    <string name="grantPermission">Allow permissions</string>

    <!-- Route search activity -->
    <string name="routeSearchTitle">Search route</string>
    <string name="search">Search route</string>
    <string name="fromSearch">Search place on a map</string>
    <string name="fromStation">From place</string>
    <string name="toStation">To place</string>
    <string name="open_map_start">Open map to pick location</string>
    <!-- Time delay -->
    <string name="delay">Free time before departure:</string>
    <string name="delayHint">in minutes</string>
    <!-- Radio buttons -->
    <string name="transChoose">Choose a preferred type of transport</string>
    <string-array name="transOptionTxt">
        <item>walking</item>
        <item>primary by car</item>
        <item>Bus + train</item>
    </string-array>
    <string name="time_format">%d:%02d</string>
    <string name="destinationASAP">Get to destination as soon as possible</string>
    <string name="specifiedTime">Get to destination on specified time</string>

    <!-- Map activity -->
    <string name="back">Back</string>
    <string name="title_activity_maps">Map</string>

    <!-- Notification -->
    <string name="freeTime">You got %s minutes of free time.</string>
    <string name="timeToDeparture">It is time to departure</string>
</resources>